# Full-stack-dev

./: README.md  index.html  main.py
Backend/Backend101/lesson-2/: lesson-2.code-workspace
Backend/Backend_project/: README.md  main.py  pyproject.toml
Backend/fastapi/DevCore/DevCore102/: recipes.txt  task_13_library_management.py  task_14_todo_app.py  task_5_trip_advisor.py  task_7_sports_statistics.py
Backend/fastapi/DevCore/DevCore103/: dev-core-103_lesson1_client_server_sim.py  dev-core-103_lesson3_tcp_server.py  dev-core-103_lesson5_port_check.txt  (+1 more)
DevCore/DevCore102/: final_project_text_adventure.py  result.txt  task_10_file_handling.py  task_11_error_handling.py  task_12_algorithms_recipes.py  task_1_clean_code_practice.py  task_2_data_structures.py  task_3_input_output.py  task_4_calculate_order.py  task_6_discount_calculator.py  task_8_recursive_navigation.py  task_9_recipe_management.py
DevCore/DevCore103/: dev-core-103_lesson3_tcp_client.py  dev-core-103_lesson4_http_requests.py  dev-core-103_lesson5_simple_server.py  simple_server.py
DevCore/DevCore103/cloud_intro/: cloud_providers_research.txt
DevCore/DevCore103/firewallsetup/: ufw_rules.txt
DevCore/DevCore104/: 2task.txt  3task.txt  6task.txt  commands_used.txt  demo.txt
DevCore/DevCore104/project/: commands_used.txt
DevCore/DevCore105/: README.md  task6.txt
Frontend/Frontend102/: index.html  index4.html  styles.css  styles1.css
mvpproject/: README.MD
mvpproject/backend/: app.py
mvpproject/frontend/: index.html
project/app/: database.py  models.py  schemas.py  utils.py
(+5 files in other folders)
