[tool.poetry]
name = "my-backend-project"
version = "0.1.0"
description = "todo-list"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
requests = "^2.32.3"
fastapi = "^0.115.3"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
